# lexer

./: .gitignore  CMakeLists.txt  README.md  checkstyle.sh  deploy.sh  index.js  package-lock.json  package.json  test.sh
.github/workflows/: main.yml
include/: CMakeLists.txt  interpreter.hpp  main.hpp
include/lexer/: CMakeLists.txt  lexer.hpp  lexer_node.hpp  token.hpp
include/lexer/node/: lexer_node.hpp  node_parser.hpp
include/lexer/token_recognizers/: array_recognizers.hpp  data_recognizers.hpp  keyword_recognizers.hpp  log_recognizers.hpp  logical_recognizers.hpp  name_recognizers.hpp  object_recognizers.hpp  operator_recognizers.hpp  short_notation_recognizers.hpp  syntax_recognizers.hpp
include/lexer/tokens/: array_tokens.hpp  data_tokens.hpp  error_tokens.hpp  keyword_tokens.hpp  log_tokens.hpp  logical_tokens.hpp  object_tokens.hpp  operator_tokens.hpp  short_notation_tokens.hpp  syntax_tokens.hpp  token.hpp
src/: CMakeLists.txt  interpreter.cpp  main.cpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer_node.cpp
src/lexer/node/: lexer_node.cpp  node_parser.cpp
src/lexer/token_recognizers/: array_recognizers.cpp  data_recognizers.cpp  keyword_recognizers.cpp  log_recognizers.cpp  logical_recognizers.cpp  name_recognizers.cpp  object_recognizers.cpp  operator_recognizers.cpp  short_notation_recognizers.cpp  syntax_recognizers.cpp
src/lexer/tokens/: token.cpp
test/: CMakeLists.txt  lexer_test.cc  main_test.cc
